--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,52 @@
-* {
-  margin: 0;
+.App {
+  text-align: center;
+  padding: 0;
+}
+
+.weather-container {
+  max-width: 450px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: rgb(198, 255, 215);
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.weather-info {
+  margin-top: 20px;
+  justify-content: center;
+}
+
+.nav {
+  border: 20px;
+  text-align: left;
+  background-color: rgb(215, 255, 242);
+  margin-top: -27px;
+}
+.css {
+  border: 10px cadetblue;
+  border: 1px rgb(229, 254, 255);
+  background-color: rgb(222, 255, 244);
+  text-align: center;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+}
+
+.h {
+  justify-content: center;
+  margin-bottom: 180px;
+  margin-top: 210px;
+  border-radius: 1px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.text-center {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: x-large;
 }
